--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -22,7 +23,6 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
-    "typescript-eslint": "^8.12.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.11.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2",
     "vite": "^6.0.2"
   }
 }
