--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+      - name: Add .nojekyll file
+        run: cp public/.nojekyll dist/.nojekyll
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
